# veille_technique

./: .gitignore  dataset_config.yaml  load_and_preprocess_dataset.ipynb  pyproject.toml  rf_detr_config.yaml
output/: events.out.tfevents.1770299063.CERVVAL-PC-146.81257.0  events.out.tfevents.1770299753.CERVVAL-PC-146.92649.0  events.out.tfevents.1770301538.CERVVAL-PC-146.95976.0
