[project]
name = "veille-technique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "rfdetr>=1.4.1",
    "roboflow>=1.2.13",
    "supervision>=0.27.0",
    "tensorboard>=2.20.0",
    "ultralytics>=8.4.9",
]
